Page MenuHome GnuPG

Kleopatra: Decryption aborts without error message to user
Closed, ResolvedPublic

Description

I noticed this when trying to decrypt a file on Windows by drag + drop on the Kleopatra icon.
Kleopatra was not running before.
The decrypt/verify window opens for 1-2 seconds and then disappears again. No Kleopatra window shows, no info for the user.

Debugview shows:

574	3653.045555	5372	kleopatra.exe	org.kde.pim.kleopatra: Using: "C:/Users/g10code.WIN-TEST3/AppData/Local/Temp/kleopatra-oFJiTO" as temporary directory.
575	3653.045591	5372	kleopatra.exe	org.kde.pim.kleopatra: creating a DecryptVerifyTask
576	3653.047614	5372	kleopatra.exe	org.kde.pim.kleopatra: dirs ("C:/Users/g10code.WIN-TEST3/Documents/")
577	3653.113734	5372	kleopatra.exe	org.kde.pim.kleopatra: Task:  "test.txt_conny-ed.gpg wird entschlüsselt …"  has no total progress set. 
578	3653.115187	5372	kleopatra.exe	org.kde.pim.libkleo: gpgconf (QProcess(0x3e1ea80)) exited (exit code: 0)
579	3653.354873	5372	kleopatra.exe	org.kde.pim.kleopatra: Collection Progress:  1000  total:  1000
580	3654.622186	5372	kleopatra.exe	<process started at 15:24:01.136 has terminated with 0xc0000005 (EXCEPTION_ACCESS_VIOLATION)>

The temporary folder given in the output there exists and contains the decrypted file.

This can also be reproduced by calling on the command line with the to-be-decrypted file as argument on Windows and Linux.

Details

Version
gpg4win-Beta-50

Event Timeline

Backtrace:

#0  0x00007ffff6643d10 in QAbstractItemView::selectionModel() const () at /lib64/libQt6Widgets.so.6
#1  0x00000000006fe608 in Kleo::KeyListController::Private::updateActions(KActionCollection*)
    (this=0x7fffe4005540, collection=0xdd7ae0) at /home/ingo/dev/kde/kleopatra/src/view/keylistcontroller.cpp:1141
#2  0x00007ffff51da593 in  () at /lib64/libQt6Core.so.6
#3  0x00007ffff7ad2655 in Kleo::KeyCache::insert(std::vector<GpgME::Key, std::allocator<GpgME::Key> > const&)
    (this=<optimized out>, keys=<optimized out>) at /home/ingo/dev/kde/libkleo/src/models/keycache.cpp:1422
#4  0x00007ffff7ad3072 in Kleo::KeyCache::refresh(std::vector<GpgME::Key, std::allocator<GpgME::Key> > const&)
    (this=<optimized out>, keys=<optimized out>) at /home/ingo/dev/kde/libkleo/src/models/keycache.cpp:1255
#5  0x00007ffff7ad5968 in Kleo::KeyCache::RefreshKeysJob::Private::updateKeyCache() (this=0xc81ff0)
    at /home/ingo/dev/kde/libkleo/src/models/keycache.cpp:1566
[...]
ikloecker triaged this task as Unbreak Now! priority.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

The fix needs to be backported for VSD 3.3.

Backported for VSD 3.3.

ikloecker changed the task status from Open to Testing.Sep 26 2024, 3:57 PM
ikloecker lowered the priority of this task from Unbreak Now! to High.

Fixed. Ready for testing.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 17 2024, 9:28 AM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 31 2024, 10:26 AM

Tested wit 4win Beta-70:

Works fine, Kleo decryption window opens, decryption works and no crash is shown in debugview any more

TobiasFella moved this task from QA to vsd-3.3.0 on the vsd33 board.
TobiasFella edited projects, added vsd33 (vsd-3.3.0); removed vsd33.