Do not crash if key cache is updated without main window

The crash occurs if Kleopatra is started with a file to decrypt because
in this case Kleopatra doesn't create a main window and instead shows
the decrypt window. Without main window the key list controller's
currentView is null.

GnuPG-bug-id: 7306